--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "test_projet_tutore",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "How to launch:",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "node server.js"
+    "run": "node server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +17,13 @@
     "multer": "^1.4.2",
     "serialijse": "^0.1.3",
     "socket.io": "^3.0.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LoicOberle/NetRadio.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LoicOberle/NetRadio/issues"
+  },
+  "homepage": "https://github.com/LoicOberle/NetRadio#readme"
 }
