--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "test_projet_tutore",
   "version": "1.0.0",
   "description": "How to launch:",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "run": "node server.js",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,9 +14,11 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "mongoose": "^5.11.18",
     "multer": "^1.4.2",
     "serialijse": "^0.1.3",
-    "socket.io": "^3.0.4"
+    "socket.io": "^3.0.4",
+    "swig": "^1.4.2"
   },
   "repository": {
     "type": "git",
