--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "multer": "^1.4.2",
     "serialijse": "^0.1.3",
     "socket.io": "^3.0.4",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "xmldom": "^0.4.0"
   },
   "repository": {
     "type": "git",
