--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http": "0.0.1-security",
     "mongoose": "^5.11.18",
     "multer": "^1.4.2",
+    "mysql2": "^2.2.5",
     "serialijse": "^0.1.3",
     "socket.io": "^3.0.4",
     "swig": "^1.4.2",
