--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "node server.js",
-    "start": "nodemon app.js"
+    "run": "node app.js",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "express-validator": "^6.10.0",
     "fs": "*",
     "http": "0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.18",
     "multer": "^1.4.2",
